--- a/src/app/edit-navigation/edit-navigation.component.html
+++ b/src/app/edit-navigation/edit-navigation.component.html
@@ -15,7 +15,7 @@
                 	<fa class="times-icon icons"   data-toggle="tooltip" data-placement="right" title="Save" data-animation="true" data-delay="0" [name]="'times'" (click)="cancelClick.emit(true)"></fa>
                 </div>
                 <div class="save-edit">
-                	<fa class="save-icon icons" data-toggle="tooltip" data-placement="right" title="Save" data-animation="true" data-delay="0" [name]="'save'"></fa>
+                	<fa class="save-icon icons" data-toggle="tooltip" data-placement="right" title="Save" data-animation="true" data-delay="0" [name]="'save'" (click)="submitClick.emit()"></fa>
                 </div>
                 <!-- <fa class="edit-icon icons" [name]="'edit'"></fa> -->
             </div>
