--- a/src/app/locality-component/locality-tab/locality-tab.component.html
+++ b/src/app/locality-component/locality-tab/locality-tab.component.html
@@ -8,7 +8,7 @@
                 <a class="nav-link hover" routerLink="/locality/option/solutions"><i class="fa fa-info-circle"></i>Solutions</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link " routerLink="/locality/option/business"><i class="fa fa-building-o"></i>Business</a>
+                <a class="nav-link "  routerLink="/locality/option/legal">Legal</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link " routerLink="/locality/option/Audit"><i class="fa fa-bell"></i>Audit/Compliance</a>
@@ -24,7 +24,7 @@
                 <a class="nav-link " routerLink="/locality/option/form2">Technical</a>
             </li>
              <li class="nav-item">
-                <a class="nav-link " routerLink="/locality/option/form2">Legal</a>
+              <a class="nav-link "  routerLink="/locality/option/business"><i class="fa fa-building-o"></i>Business</a> 
             </li>
         </ul>
     </div>
