--- a/src/app/locality-component/locality-tab/locality-solutions/locality-solutions.component.html
+++ b/src/app/locality-component/locality-tab/locality-solutions/locality-solutions.component.html
@@ -1,91 +1,113 @@
 <div class="plus">
-<form class="form">
- <i class="fa fa-plus-square-o"   aria-hidden="true" style="font-size: 24px;" (click)="selectLocality()"></i>
- </form>
- </div>
- 
- <form class="former" *ngIf="showMainTable">
-<table class="table table-striped table-hover table-bordere">
-  <thead>
-    <tr>
-     
-      <th scope="col">Solution Name</th>
-      <th scope="col">Vendor Name</th>
-      <th scope="col">Equipment Type</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr>
-    <th><a routerLink="/locality/option/link">1</a></th>
-      <td>Mark</td>
-      <td>Otto</td>
-      
-    </tr>
-    <tr>
-       <th> <a routerLink="/locality/option">1</a></th>
-      <td>Jacob</td>
-      <td>Thornton</td>
-      
-    </tr>
-    <tr>
-       <th> <a routerLink="/locality/option">1</a></th>
-      <td>Larry</td>
-      <td>the Bird</td>
-      
-    </tr>
-  </tbody>
-</table>
+   
+        <i class="fa fa-plus-square-o" aria-hidden="true" style="font-size: 24px;" (click)="selectLocality()"></i>
+   
+</div>
+
+
+<form class="former" *ngIf="showMainTable">
+    <table class="table table-striped table-hover table-bordere">
+        <thead>
+            <tr>
+
+                <th scope="col">Solution Name</th>
+                <th scope="col">Vendor Name</th>
+                <th scope="col">Equipment Type</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <th><a routerLink="/locality/option/link">1</a></th>
+                <td>Mark</td>
+                <td>Otto</td>
+
+            </tr>
+            <tr>
+                <th> <a routerLink="/locality/option">1</a></th>
+                <td>Jacob</td>
+                <td>Thornton</td>
+
+            </tr>
+            <tr>
+                <th> <a routerLink="/locality/option">1</a></th>
+                <td>Larry</td>
+                <td>the Bird</td>
+
+            </tr>
+        </tbody>
+    </table>
 </form>
 
 
-<form class="forms" *ngIf="showTable">
-<p><b>APPLICATION SOLUTIONS</b></p>
- <div class="form-row">
-             <div class="form-group col-md-6">
-                <label for="modelSolution">System Type</label>
-                
-                <select id="modelSolution" class="form-control" (change)="selectBox($event.target.value)">
+<form class="forms" *ngIf="showTable" [formGroup]="invoiceForm">
+    <p><b>APPLICATION SOLUTIONS</b></p>
+    <div class="form-row">
+        <div class="form-group col-md-6">
+            <label for="modelSolution">System Type</label>
+
+            <select id="modelSolution" class="form-control" (change)="selectBox($event.target.value)">
             <option selected>Choose...</option>
             <option>EVS</option>
               <option>EPB</option>
           </select>
-            </div>
-           </div>
-           
-        <div class="form-row" *ngIf="showSection">
-             <div class="form-group col-md-6">
+        </div>
+    </div>
+    <div *ngIf="showSection">
+        <div class="form-row">
+            <div class="form-group col-md-6">
                 <label for="lastName">Model/Solution</label>
-                 <select id="inputState" class="form-control">
+                <select id="inputState" class="form-control">
             <option selected>Choose...</option>
             <option>...</option>
               </select>
             </div>
-            </div>
-            
-             <div class="form-row" *ngIf="showSection">
-             <div class="form-group col-md-6">
+        </div>
+
+        <div class="form-row">
+            <div class="form-group col-md-6">
                 <label for="lastName">Equipment Type</label>
                 <input type="text" class="form-control" id="lastName" value="Value">
             </div>
-             </div>
-              <div class="form-row" *ngIf="showSection">
-             <div class="form-group col-md-6">
+        </div>
+
+        <div class="form-row">
+            <div class="form-group col-md-6">
                 <label for="lastName">Vendor</label>
                 <input type="text" class="form-control" id="lastName" value="Value">
             </div>
-            </div>
-            <hr/>
-            <div class="form-row" *ngIf="showSection">
+        </div>
+        <hr/>
+        <div class="form-row">
             <div class="form-group col-md-6">
                 <label for="lastName">Hosting Type</label>
                 <input type="text" class="form-control" id="lastName" value="Value">
             </div>
-            </div>
-         <div class="form-row" *ngIf="showSection">
+        </div>
+        <div class="form-row">
             <div class="form-group col-md-6">
-                <label for="lastName">No of Units</label>
-                <input type="text" class="form-control" id="lastName" value="Value">
+                <label for="units">No of Units</label>
+                <input type="number" class="form-control" id="units" value="Value" (input)="onUnitsChange($event.target.value)">
             </div>
-            </div>
-        
-</form>
+        </div>
+         
+        <table formArrayName="itemRows" *ngIf="invoiceForm.controls.itemRows.controls.length > 0" class="table table-bordered">
+            <!-- Check the correct way to iterate your form array -->
+            <thead>
+                <tr>
+                    <th>Model #</th>
+                    <th>Serial #</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr *ngFor="let itemrow of invoiceForm.controls.itemRows.controls; let i=index" [formGroupName]="i">
+                    <td><input type='text' class="form-control" formControlName="one"></td>
+                    <td><input type='text' class="form-control" formControlName="two"></td>
+                </tr>
+            </tbody>
+        </table>
+        <button type="submit" class="btn btn-primary" (click)="onSubmit()">Submit</button>
+       
+    </div>
+ </form>
+ 
+   
