--- a/src/app/locality-component/locality-tab/locality-details/locality-details.component.html
+++ b/src/app/locality-component/locality-tab/locality-details/locality-details.component.html
@@ -1,102 +1,223 @@
 <div class="form-div">
-    <form class="former">
-     <div class="tip">
-            <p class="tip-text">
-                <fa class="light-bulb" [name]="'lightbulb-o'"></fa>Tip:</p>
-        </div>
-    <p><b>Contact Information</b></p>
-        <div class="form-row">
-            <div class="form-group col-md-6">
-				
-                <label for="inputState">First Name</label>
-                <div class="asterisk">*</div>
-               <input type="text" class="form-control" id="lastName" value="Value">
-            </div>
-            <div class="form-group col-md-6">
-                <label for="lastName">Last Name</label>
-                 <div class="asterisk">*</div>
-                <input type="text" class="form-control" id="lastName" value="Value">
-            </div>
-        </div>
+	<form class="former">
+
+		<div class="tip">
+			<p class="tip-text">
+				<fa class="light-bulb" [name]="'lightbulb-o'"></fa>
+				Tip:
+			</p>
+		</div>
+		<p>
+			<b>General Information</b>
+		</p>
+		<div class="form-row">
+			<div class="form-group col-md-6">
+
+				<label for="inputState">Last Updated by</label>
+				<div class="asterisk">*</div>
+				<input type="text" class="form-control" id="lastName" value="Value">
+			</div>
+			<div class="form-group col-md-6">
+				<label for="lastName">Updated at</label>
+				<div class="asterisk">*</div>
+				<input type="text" class="form-control" id="lastName" value="Value">
+			</div>
+		</div>
+		<div class="form-row">
+			<div class="form-group col-md-6">
+
+				<label for="inputState">Locality Name</label>
+				<div class="asterisk">*</div>
+				<input type="text" class="form-control" id="lastName" value="Value">
+			</div>
+			<div class="form-group col-md-6">
+
+				<label for="inputState">Locality Code</label>
+				<div class="asterisk">*</div>
+				<input type="text" class="form-control" id="lastName" value="Value">
+			</div>
+
+		</div>
+		<div class="form-row">
+
+			<div class="form-group col-md-6">
+				<label for="lastName">FIPS Code</label> <input type="text"
+					class="form-control" id="lastName" value="Value">
+
+			</div>
+		</div>
+	</form>
 
 
 
-        <div class="form-row">
-             <div class="form-group col-md-6">
-                <label for="lastName">Email Id</label>
-                <div class="asterisk">*</div>
-                <input type="text" class="form-control" id="lastName" value="Value">
-            </div>
-            <div class="form-group col-md-6">
-         
-                <label for="email">Phone No</label>
-                    <div class="asterisk">*</div>
-                    <input type="email" class="form-control" id="email" value="Value">
-            </div>
-        </div>
-        <div class="form-row">
-             <div class="form-group col-md-6">
-                <label for="lastName">Website Address</label>
-                <div class="asterisk">*</div>
-                <input type="text" class="form-control" id="lastName" value="Value">
-            </div>
-            <div class="form-group col-md-6">
-                <label for="email">Veris Id</label>
-                 <div class="asterisk">*</div>
-                    <input type="email" class="form-control" id="email" value="Value">
-            </div>
-          
-        </div>
-          <hr/>
-        <div class="form-row">
-             <div class="form-group col-md-6">
-                <label for="lastName">Central Absentee Perceived(CAP)</label>
-               <div class="asterisk">*</div><br>
-                <input type="radio" name="yes" value="male">Yes<br>
-                 <input type="radio" name="no" value="male"> No
-            </div>
-            <div class="form-group col-md-6">
-                <label for="email">Bail out</label>
-                <div class="asterisk">*</div><br>
-                     <input type="radio" name="yes" value="male">Yes<br>
-                 <input type="radio" name="no" value="male"> No
-            </div>
-        </div>
-        <div class="form-row">
-             <div class="form-group col-md-6">
-                <label for="lastName">Automate</label>
-                <div class="asterisk">*</div>
-                <input type="text" class="form-control" id="lastName" value="Value">
-            </div>
-            <div class="form-group col-md-6">
-                <label for="email">COMET/Penality</label>
-                    <input type="email" class="form-control" id="email" value="Value">
-            </div>
-        </div>
-         <div class="form-row">
-             <div class="form-group col-md-6">
-                <label for="lastName">County/City Code</label>
-                <div class="asterisk">*</div>
-                <input type="text" class="form-control" id="lastName" value="Value">
-            </div>
-            <div class="form-group col-md-6">
-                <label for="email">FIPS Code</label>
-                    <input type="email" class="form-control" id="email" value="Value">
-            </div>
-        </div>
-        
-         <div class="form-row">
-             <div class="form-group col-md-6">
-                <label for="lastName">VEBA region/VRAV region</label>
-               <div class="asterisk">*</div><br>
-                <input type="radio" name="yes" value="male">Yes<br>
-                 <input type="radio" name="no" value="male"> No
-            </div>
-            <div class="form-group col-md-6">
-                <label for="email">Hours of Operation</label>
-                    <input type="email" class="form-control" id="email" value="Value">
-            </div>
-        </div>
-        
-        
-        </form>
+
+	<form class="former">
+
+		<p>
+			<b>Contact Information</b>
+		</p>
+		<div class="form-row">
+			<div class="form-group col-md-6">
+
+				<label for="inputState">First Name</label>
+				<div class="asterisk">*</div>
+				<input type="text" class="form-control" id="lastName" value="Value">
+			</div>
+			<div class="form-group col-md-6">
+				<label for="lastName">Last Name</label>
+				<div class="asterisk">*</div>
+				<input type="text" class="form-control" id="lastName" value="Value">
+			</div>
+		</div>
+
+
+
+		<div class="form-row">
+			<div class="form-group col-md-6">
+				<label for="lastName">Email Id</label>
+				<div class="asterisk">*</div>
+				<input type="text" class="form-control" id="lastName" value="Value">
+			</div>
+			<div class="form-group col-md-6">
+
+				<label for="email">Phone No</label>
+				<div class="asterisk">*</div>
+				<input type="email" class="form-control" id="email" value="Value">
+			</div>
+		</div>
+		<div class="form-row">
+			<div class="form-group col-md-6">
+				<label for="lastName">Website Address</label>
+				<div class="asterisk">*</div>
+				<input type="text" class="form-control" id="lastName" value="Value">
+			</div>
+			<div class="form-group col-md-6">
+				<label for="email">Veris Id</label>
+				<div class="asterisk">*</div>
+				<input type="email" class="form-control" id="email" value="Value">
+			</div>
+
+		</div>
+		<hr />
+		<p>
+			<b>Other Information</b>
+		</p>
+		<div class="form-row">
+			<div class="form-group col-md-6">
+				<label for="lastName">Central Absentee Perceived(CAP)</label>
+				<div class="asterisk">*</div>
+				<input type="radio" name="yes" value="value">Yes<br>
+				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<input
+					type="radio" name="no" value="male"> No
+			</div>
+			<div class="form-group col-md-6">
+				<label for="email">Bail out</label>
+				<div class="asterisk">*</div>
+				<input type="radio" name="yes" value="value">Yes<br>
+				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<input
+					type="radio" name="no" value="male"> No
+			</div>
+		</div>
+		<div class="form-row">
+			<div class="form-group col-md-6">
+				<label for="lastName">Automate COMET/Penality</label>
+				<div class="asterisk">*</div>
+				<input type="text" class="form-control" id="lastName" value="Value">
+			</div>
+
+		</div>
+		<hr />
+
+		<div class="form-row">
+
+			<div class="form-group col-md-6">
+				<fieldset>
+					<p>
+						<b>Hours of operation</b>
+					</p>
+					<div class="form-row">
+						<div class="form-group col-md-6">
+							<label for="doctor">Day</label> <select id="doctor">
+								<option value="monday">Monday</option>
+								<option value="moreau">Tuesday</option>
+								<option value="watson">Wednesday</option>
+								<option value="watson">Thursday</option>
+								<option value="watson">Friday</option>
+								<option value="watson">Saturday</option>
+								<option value="watson">Sunday</option>
+								<option value="watson">Closed</option>
+							</select>
+						</div>
+						<div class="form-group col-md-6">
+							<label for="appt-time">Time</label> <input type="time"
+								id="appt-time" name="appt-time" min="9:00" max="18:00" required (input)="time = $event.target.value" />
+							<span class="hours">Office hours: 9AM to 6PM</span>
+						</div>
+
+					</div>
+				</fieldset>
+<button type="submit" class="btn btn-primary" (click)="setTime()">Submit</button>
+			</div>
+		</div>
+		
+
+		<hr />
+		<p>
+			<b>Region</b>
+		</p>
+		<div class="form-row">
+
+			<div class="form-group col-md-6">
+
+
+				<input type="radio" name="yes" value="value">VEBA region<br>
+				<input type="radio" name="no" value="male">VRAV region
+			</div>
+
+
+
+		</div>
+		<hr />
+		<p>
+			<b>PollBook</b>
+		</p>
+		<div class="form-row">
+			<div class="form-group col-md-6">
+				<label for="lastName">Paper PollBook</label>
+				<div class="asterisk">*</div>
+				<input type="radio" name="yes" value="value">Yes<br>
+				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<input
+					type="radio" name="no" value="male"> No
+			</div>
+			<div class="form-group col-md-6">
+				<label for="email">Electronic PollBook</label>
+				<div class="asterisk">*</div>
+				<input type="radio" name="yes" value="value">Yes<br>
+				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<input
+					type="radio" name="no" value="male"> No
+			</div>
+		</div>
+		<hr />
+		<p>
+			<b>Notes</b>
+		</p>
+		<div class="form-group col-md-6">
+
+
+			<input type="text" class="form-control" id="lastName" value="Value">
+		</div>
+		<div></div>
+
+		<div class="buttons">
+			<button type="submit" class="btn btn-primary">Submit</button>
+			<button type="cancel" class="btn btn-primary">Cancel</button>
+
+
+		</div>
+
+
+
+
+
+
+	</form>
