--- a/src/app/locality-component/locality-tab/locality-solutions/locality-solutions.component.css
+++ b/src/app/locality-component/locality-tab/locality-solutions/locality-solutions.component.css
@@ -1,10 +1,7 @@
 .plus{
 	float:right;
-	 vertical-align: middle;
     font-size: 20px;
-    margin-top: -15px;
-    padding: 10px;
-    margin-left: 50px;
+    margin-right: 20px;
     color: #3A539B;
 }
 
@@ -74,7 +71,10 @@ tbody tr:nth-child(even) {
   margin: 20px;
   background-color: #EEEEEE;
 }
-
+.clear-right {
+	clear:right;
+	overflow: hidden;
+}
 .table-striped tbody tr:nth-of-type(odd) {
     background-color: #EEEEEE !important;
 }
